New design for profile fields, remove about tab